--- a/package.json
+++ b/package.json
@@ -20,5 +20,9 @@
   "dependencies": {
     "discord.js": "^14.21.0",
     "dotenv": "^17.2.0"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.31.0",
+    "eslint": "^9.31.0"
   }
 }
